Remove confidential data and update documentation
- Remove data folder from repository (confidential)
- Update .gitignore to exclude all data files
- Update README with generic data requirements
- Dataset structure documented but not included

--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,11 @@ src/pitch_deck_generator.py
 src/report_generator.py
 src/word_report_generator.py
 
+# Data files (confidential)
+data/
+*.xlsx
+*.csv
+
 # Logs
 *.log
 logs/
